public class FullRights extends CanModify {


    public FullRights(String firstNam, String lastName, int id, String address) {
        super(firstNam, lastName, id, address);
    }
}
