public class PdfDoc extends TextDoc{

    public PdfDoc(Author author, String docName, String description, double fileSize) {
        super(author, docName, description, fileSize);
    }

}
