public class PictureDoc extends MediaDoc {

    public PictureDoc(Author author, String docName, String description, double fileSize, double imageDimensionHeight, double imageDimesionWidth) {
        super(author, docName, description, fileSize, imageDimensionHeight, imageDimesionWidth);
    }




}
