public interface TestInteface {
    public void druk();
}
