public class TextDoc extends Documents {

    public TextDoc(Author author, String docName, String description, double fileSize) {
        super(author, docName, description, fileSize);
    }


}
