@startuml

title __SRC's Class Diagram__\n

  package  {
    class Author {
        - firstName : String
        - lastName : String
        - id : int
        - address : String
        + Author()
        + createWordDoc()
        + createPdfDoc()
        + createPictureDoc()
        + createVideoDoc()
        + getFirstName()
        + getLastName()
        + toString()
    }
  }
  

  package  {
    class AuthorsCollectionArrayList {
        ~ authorArrayList : ArrayList<Author>
        + toString()
    }
  }
  

  package  {
    class AuthorsCollectionTreeSet {
        ~ authorTreeSet : TreeSet<Author>
    }
  }
  

  package  {
    class CanModify {
        + CanModify()
    }
  }
  

  package  {
    abstract class Documents {
        - description : String
        - fileSize : double
        - docName : String
        + Documents()
        + getDescription()
        + getFileSize()
        + getDocName()
        + isFileSizeTooBig()
    }
  }
  

  package  {
    class FullRights {
        + FullRights()
    }
  }
  

  package  {
    class MediaDoc {
        - imageDimensionHeight : double
        - imageDimensionWidth : double
        + MediaDoc()
        + druk()
    }
  }
  

  package  {
    class PdfDoc {
        + PdfDoc()
    }
  }
  

  package  {
    class PictureDoc {
        + PictureDoc()
    }
  }
  

  package  {
    class Program {
        {static} + main()
    }
  }
  

  package  {
    class ReadOnly {
        + ReadOnly()
    }
  }
  

  package  {
    interface TestInteface {
        {abstract} + druk()
    }
  }
  

  package  {
    class TextDoc {
        + TextDoc()
    }
  }
  

  package  {
    class VideoDoc {
        - videoDuration : double
        + VideoDoc()
    }
  }
  

  package  {
    class WordDoc {
        + WordDoc()
        + druk()
    }
  }
  

  CanModify -up-|> ReadOnly
  Documents o-- Author : author
  FullRights -up-|> CanModify
  MediaDoc -up-|> TestInteface
  MediaDoc -up-|> Documents
  PdfDoc -up-|> TextDoc
  PictureDoc -up-|> MediaDoc
  ReadOnly -up-|> Author
  TextDoc -up-|> Documents
  VideoDoc -up-|> MediaDoc
  WordDoc -up-|> TestInteface
  WordDoc -up-|> TextDoc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
